--- a/_posts/2016-05-11-meet-ozlo.md
+++ b/_posts/2016-05-11-meet-ozlo.md
@@ -5,7 +5,7 @@ layout: post
 
 Meet Ozlo.
 
-![Say hello to Ozlo!](/i/meet-ozlo.gif "Say hello to Ozlo")
+->![Say hello to Ozlo!](/i/meet-ozlo.gif =400x "Say hello to Ozlo")<-
 
 ->([Animated Ozlo](https://dribbble.com/shots/2704505-Meet-Ozlo), cred [@foxattacks](https://twitter.com/foxattacks))<-
 
@@ -82,7 +82,7 @@ actually talk, supported by deep tech and big data.
 ## The power of conversational UI
 
 Intuitive visual UI design is deep - a true art form.  There are
-many simple questions, however, that don't really translate into a
+many simple questions, however, that don't translate well into a
 visual form.  For instance, how might you design a UI that lets you
 search for restaurants based on their hours?  Sure there is an answer,
 but it is yet another widget which makes an interface feel heavy and
@@ -92,7 +92,7 @@ no complicated UI which requires multiple taps and interactions, but
 rather, you just do what you've been doing since your first birthday,
 *speak*.
 
-![Image of "bars open after 10pm near evans & university"!](/i/bars.jpg "Ozlo in action")
+->![Image of "bars open after 10pm near evans & university"!](/i/bars.jpg =400x "Ozlo in action")<-
 
 Using language as an interface makes extremely advanced features
 usable.  This is exciting because it lifts so many limitations from
